force-app/main/default/objects/client__c/client__c.object-meta.xml
<CustomObject>
    <label>Client</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Client ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>