force-app/main/default/objects/client__c/fields/address_of_client__c.field-meta.xml
<CustomField>
    <fullName>address_of_client__c</fullName>
    <label>address of client</label>
    <summaryForeignKey>Address__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>