force-app/main/default/objects/client__c/fields/all_client_address__c.field-meta.xml
<CustomField>
    <fullName>all_client_address__c</fullName>
    <label>all_client_address</label>
    <summaryFilterItems>
        <field>Address__c.City__c</field>
        <operation>equals</operation>
        <value>Nagpur</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Address__c.City__c</field>
        <operation>equals</operation>
        <value>Surat</value>
    </summaryFilterItems>
    <summaryForeignKey>Address__c.Client__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>