force-app/main/default/objects/client__c/fields/Count_Of_Address__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Address__c</fullName>
    <label>Count_Of_Address</label>
    <length>15</length>
    <type>Text</type>
</CustomField>