force-app/main/default/objects/client__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last_Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>