force-app/main/default/objects/client__c/fields/Mother_s_Medan_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Medan_Name__c</fullName>
    <label>Mother&apos;s Medan Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>