force-app/main/default/objects/client__c/fields/Pan_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card_Number__c</fullName>
    <label>Pan Card Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>