force-app/main/default/objects/client__c/fields/passport__c.field-meta.xml
<CustomField>
    <fullName>passport__c</fullName>
    <label>passport</label>
    <length>15</length>
    <type>Text</type>
</CustomField>