force-app/main/default/objects/client__c/fields/Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Phone_number__c</fullName>
    <label>Phone_number</label>
    <type>Phone</type>
</CustomField>