force-app/main/default/objects/client__c/fields/Recent_City__c.field-meta.xml
<CustomField>
    <fullName>Recent_City__c</fullName>
    <label>Recent_City</label>
    <length>15</length>
    <type>Text</type>
</CustomField>