force-app/main/default/objects/client__c/fields/Special_mark_on_a_body__c.field-meta.xml
<CustomField>
    <fullName>Special_mark_on_a_body__c</fullName>
    <label>Special mark on a body</label>
    <type>TextArea</type>
</CustomField>