force-app/main/default/objects/client__c/validationRules/Verify_pan_card.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_pan_card</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Pan_Card_Number__c )  &lt;&gt; 10</errorConditionFormula>
    <errorDisplayField>Pan_Card_Number__c</errorDisplayField>
    <errorMessage>Please enter the 10 digit pancard number.</errorMessage>
</ValidationRule>